--- a/1-Schemas/A-entity_record_schema/10_trade.yml
+++ b/1-Schemas/A-entity_record_schema/10_trade.yml
@@ -5,16 +5,69 @@ type: object
 
 properties:
 
-  ID:
+  code:
   #---------------------------------
-    description: 
+    description: Unique identifier for the craft
+    type: string
   
   name:
   #---------------------------------
+    description: a short name given by the creator of the record.
+    type: string
 
-    description:
-
-  type:
+  organization:
   #---------------------------------
+    description: a short name given by the creator of the record.
     
-    
+  skill_levels:
+  #---------------------------------
+    type: array
+    description: List of skill levels within this craft
+    items:
+      type: object
+      properties:
+        
+        skill_level:
+        #---------------------------------
+          type: string
+          description: Skill level associated with the craft (e.g., APPRENTICE, JOURNEYMAN, MASTER)
+
+        hourly_rate:
+        #--------------------------------- 
+          description: Standard hourly rate for this skill level
+          type: number
+
+        qualifications:
+        #---------------------------------
+          description: qualifications required to hold 
+          oneOf:
+            - type: null
+            - type: array
+              items: 
+                type: object
+
+  association_to_persons:
+  #---------------------------------
+    description: The primary craft or skill associated with the person, if the person plays the role of a trade person. 
+    oneOf:
+      - type: null
+      - type: array
+        items: 
+          type: object
+          properties:
+
+            trade:
+            ##------------------------------------ 
+              $ref: "./10_trade.yml"
+
+            skill_level:
+            ##------------------------------------
+              type: string
+              $comment: load the list of skilled trades       
+
+  status:
+  #---------------------------------
+    type: string
+    enum:
+      - active
+      - inactive
