--- a/1-Schemas/A-entity_record_schema/11_warranty.yml
+++ b/1-Schemas/A-entity_record_schema/11_warranty.yml
@@ -62,9 +62,9 @@ properties:
         items:
           $ref: "./01_asset.yml"
 
-  warranty_contract_attachment:
+  contract_document:
   #---------------------------------------
-    description: the warranty contract document
+    description: the PDF version of the contract document.
     oneOf: 
       - type: null
       - type: array
