--- a/1-Schemas/A-entity_record_schema/02_role.yml
+++ b/1-Schemas/A-entity_record_schema/02_role.yml
@@ -7,7 +7,7 @@ type: object
 properties:
 
   ID:
-
+  #---------------------------------------
     type: string
     description: Also known as the "tag number" or "entity number" in Avantis's vocabulary. (Avantis is the a WMS).
     #[] to do ID for pumping stations an chambers will be from the GIS. 
@@ -21,7 +21,7 @@ properties:
         status: false
     
   name:
-
+  #---------------------------------------
     type: string
     description: A structured and ideally unique description of the role.
     const: > #[]
@@ -31,22 +31,22 @@ properties:
     # MT []: would you like me to move this into individual roles?
 
   parent:
-
+  #---------------------------------------
     $ref: "./02_asset_role.yml"
     description: References the role that is served by the larger asset, which physically subsumes the asset serving this role.
   
   class:
-
+  #---------------------------------------
     $ref: B-entity_class_object_schema/02_asset_role_class.yml
     description: The class denote the broad types of asset that may play the role (e.g., "breaker role"), and sometimes, more specifically, it also denotes the useful function provided by that asset in the role to the larger system (e.g., the "tie-breaker role" provides tie-breaking function to the electrical distribution system).
 
-  class_dependent_specifications:
-
+  specifications:
+  #---------------------------------------
     type: object
     description: is a set of properties applicable to the class. 
 
   inferred_classes:
-
+  #---------------------------------------
     oneOf: 
       - type: array
         items:
@@ -60,16 +60,14 @@ properties:
       See the comment for inferred classe names(s) made in the \TWmaximoConfig\1-Schemas\A-entity_record_schema/01_asset_schema.yml
 
   role_status:
-
+  #---------------------------------------
     type: string
     enum:
       - specified
       - active
       - eliminated
-    
     description: |
       This is the basic life-cycle status of a role. Specified means the role is conceived and exists in some specification or design documentation. Active means the necessary supports exist for an asset to serve in the role and function of the asset being utilized. Eliminated represents a negation of either or both conditions of the active status.
-    
     rule_spec: |
       #[]RULE VkiDyJcSxg: Before a role can be eliminated, all children, as well as the descendants of the role in the hierarchy must also be eliminated. 
         $comment: a procedure should to be created to allow the recursive elimination of a role and all of its children. 
@@ -78,18 +76,19 @@ properties:
       #[]RULE EkP5qy5Sxl: If change auditing cannot be turned on, then when a role record status is "eliminated", all the specification in the record's datafields must be frozen.
 
   role technical requirement description:
-
+  #---------------------------------------
     type: string
     description: A free text description of the role's performance requirements that must be satisfied by the asset. For example, the lifting capacity in kilograms for a crane.
     $comment: |
       Eventually, this information should be replaced by formalized properties associated with specific classes. For example, for the motor role class, there would be a requirement for a minimum amount of horsepower or torque. 
 
   serving_asset_in_asset_role:
-
+  #---------------------------------------
     $ref: "./02_asset_role.yml"
     description: Identifies the asset this role is serving. For example, given a motor starter role, the value in this data field identifies the role of the motor controlled by that motor starter. 
   
-  asset installation location:
+  asset_installation_location:
+  #---------------------------------------
     oneOf: 
       - $ref: "./03_space.yml"
       - type: null
@@ -99,61 +98,47 @@ properties:
     oneOf: [$ref: MaximoServiceAddressObject, type: null]
     description: A geo-coordinate or the nearest street address of the asset.
 
-  #========================
-
   operator_group:
-  
+  #---------------------------------------
   inherit operator group value:
     type: boolean
     default value: true
-  
-  #========================
 
   inherit_operator_group_from_parent:
-
+  #---------------------------------------
     type: boolean
     default_value: true
-  
-  #========================
 
   maintenance_group:
-
+  #---------------------------------------
     oneOf: [$ref: "./04_org_or_group.yml", type: null]
     description: Group responsible for the preventive and reactive maintenance of the asset in the role. For example, a unit, work area, or crew. 
-  
-  #========================
 
   inherit_maintenance_group_from_parent:
-
+  #---------------------------------------
     type: boolean
     default_value: true
 
-  #========================
-
-  operational criticality:
-
+  operational_criticality:
+  #---------------------------------------
     oneOf: [$ref:'#/definitions/criticality rating definition', type: null] # see section 3. LOCAL OBJECT DEFINITION 
     description: A role bears high operational criticality if the loss of the asset in the role will either reduce throughput or product quality (but not product safety) of the larger system.
 
-  #========================
-
   protective function criticality:
-
+  #---------------------------------------
     oneOf: [$ref:'#/definitions/criticalityRatingDef', type: null] # see section 3. LOCAL OBJECT DEFINITION
     description: A role bears protective function criticality if the loss of one of its protective functions (i.e., regulatory/control/protection or containment function) will either result in a consequential release of hazard or the loss of a capability to mitigate a greater level hazard.
 
-  #========================
-
   duplicate record of:
+  #---------------------------------------
     oneOf: 
       - type: array
         items:
           $ref: "./02_asset_role.yml"
       - type: null
-  
-  #========================
 
   record retirement information:
+  #---------------------------------------
     $ref: "./00_common_definitions.yml#/definitions/record retirement definition"
   
 
