--- a/1-Schemas/B-entity_class_object_schema/02_role_class.yml
+++ b/1-Schemas/B-entity_class_object_schema/02_role_class.yml
@@ -14,26 +14,26 @@ properties:
     - $ref: "/1-Schemas/B-entity_class_object_schema/00_common_class_definitions.yml"
     #inherit the defintions and rules from th "/1-Schemas/B-entity_class_object_schema/00_common_class_definitions.yml"
 
-  parent class:
+  parent_class:
     $ref: B-entity_class_object_schema/02_asset_role_class.yml
     sort order: 1-30
 
-  discrete asset role:
+  discrete_asset_role:
     oneOf: [type: boolean, type: null]
     read-only: true
     description: a role that can be occupied by a single discrete asset.
 
-  functional structure role: 
+  functional_structure_role: 
     oneOf: [type: boolean, type: null]
     read-only: true
     description: a role that cannot be occupied any discrete asset, but can be the parent to other roles.
 
-  defined set of roles:
+  defined_set_of_roles:
     oneOf: [type: boolean, type: null]
     read-only: true  
     description: a role that can be occupied by a collection of descrete assets. 
 
-  compatible asset occupant class(s):
+  compatible_asset_occupant_classes:
     oneOf: 
       - type: array
         items:
