--- a/1-Schemas/B-entity_class_object_schema/03_space_class.yml
+++ b/1-Schemas/B-entity_class_object_schema/03_space_class.yml
@@ -9,5 +9,5 @@ properties:
     - $ref: "/1-Schemas/B-entity_class_object_schema/00_common_class_definitions.yml"
     #inherit the defintions and rules from th "/1-Schemas/B-entity_class_object_schema/00_common_class_definitions.yml"
 
-  parent class:
+  parent_class:
     $ref: spaceClassObject
