--- a/1-Schemas/B-entity_class_object_schema/04_org_class.yml
+++ b/1-Schemas/B-entity_class_object_schema/04_org_class.yml
@@ -10,6 +10,6 @@ properties:
     - $ref: "/1-Schemas/B-entity_class_object_schema/00_common_class_definitions.yml"
   #inherit the definitions and rules from th "/1-Schemas/B-entity_class_object_schema/00_common_class_definitions.yml"
   
-  parent class:
+  parent_class:
     $ref: orgGroupClassObject
 
