--- a/1-Schemas/A-entity_record_schema/04_org-chart_group.yml
+++ b/1-Schemas/A-entity_record_schema/04_org-chart_group.yml
@@ -1,17 +1,17 @@
 ---
 $schema: "http://json-schema.org/draft-07/schema#"
-title: functional group
+title: org-chart group
 $id: https://raw.githubusercontent.com/TW-ASMP/TWmaximoConfig/main/1-Schemas/A-entity_record_schema/04_org_schema.yml
 type: object
 properties:
 
   ID:
   
-  functional_group_name:
+  org-chart_group_name:
 
     type: string 
 
-  parent_functional_group:
+  parent_org-chart_group:
 
     oneOf:
       - $ref: "./04_org_or_group.yml"
@@ -35,12 +35,12 @@ properties:
 
   equivalent_to_Maximo_site:
 
-    description: indicates that this functional group maps to a particular site (a native Maximo object)
+    description: indicates that this org-chart group maps to a particular site (a native Maximo object)
     $ref: MaximoSiteObject
 
   equivalent_to_Maximo_org:
 
-    description: indicates that this functional group maps to a particular functional group (a native Maximo object)
+    description: indicates that this org-chart group maps to a particular org-chart group (a native Maximo object)
     $ref: MaximoOrgObject
 
   duplicate record of:
