--- a/1-Schemas/A-entity_record_schema/33_PM.yml
+++ b/1-Schemas/A-entity_record_schema/33_PM.yml
@@ -23,7 +23,7 @@ properties:
 
   operational_unit:
 
-    description: indicates Toronto Water's operational unit, on the functional group hierarchy, such as Waste and Storm Water Pumping (symbol - WASP) or Humber Wastewater Treatment Plant (symbol - THR).
+    description: indicates Toronto Water's operational unit, on the org-chart group hierarchy, such as Waste and Storm Water Pumping (symbol - WASP) or Humber Wastewater Treatment Plant (symbol - THR).
     $ref: "./04_org_or_group.yml"
   
   # ==========
@@ -43,7 +43,7 @@ properties:
       - type: null
       - $ref: "./04_org_or_group.yml"
     
-    comment: This value will be determined by (and must be consistent with) the maintainer_functional_group value - situated at a lower level of the functional group hierarchy
+    comment: This value will be determined by (and must be consistent with) the maintainer_org-chart_group value - situated at a lower level of the org-chart group hierarchy
 
   # ==========
 
