--- a/1-Schemas/A-entity_record_schema/34_FR_WR_WO.yml
+++ b/1-Schemas/A-entity_record_schema/34_FR_WR_WO.yml
@@ -267,7 +267,7 @@ properties:
 
   work_priority:
   #-----------------------------
-    description: a synthetic number derived from the condition of the asset function being maintained (i.e., how close is it to failure), and the importance (or criticality) of the asset function to the functional group's goals.
+    description: a synthetic number derived from the condition of the asset function being maintained (i.e., how close is it to failure), and the importance (or criticality) of the asset function to the org-chart group's goals.
 
     implementation:
       MX_mapping: INTERNALPRIORITY
@@ -306,7 +306,7 @@ properties:
 
   site:
   #-----------------------------
-    description: indicates Toronto Water's operational unit, on the functional group hierarchy, such as Waste and Storm Water Pumping (symbol - WASP) or Humber Wastewater Treatment Plant (symbol - THR).
+    description: indicates Toronto Water's operational unit, on the org-chart group hierarchy, such as Waste and Storm Water Pumping (symbol - WASP) or Humber Wastewater Treatment Plant (symbol - THR).
     $ref: "./04_org_or_group.yml"
     
     implementation:
@@ -352,7 +352,7 @@ properties:
 
     WO_only: true
     
-    comment: This value will be determined by (and must be consistent with) the maintainer_functional_group value - situated at a lower level of the functional group hierarchy
+    comment: This value will be determined by (and must be consistent with) the maintainer_org-chart_group value - situated at a lower level of the org-chart group hierarchy
 
   trades_assignment:
   #-----------------------------
